# pallet

./: .gitignore  Cargo.toml  README.md  pallet.yaml
.github/workflows/: ci.yml  release.yml
demo/: README.md  demo.tape  record.sh  setup.sh
demo/fixtures/org-governance/rules/: coding-standards.md  security-baseline.md
demo/fixtures/team-skills/rules/: coding-standards.md  commit-messages.md
demo/fixtures/team-skills/skills/migration-readiness/: SKILL.md
docs/: DESIGN.md  USE_CASES.md
docs/roadmap/: keychain-credential-storage.md
src/: builtin.rs  config.rs  git.rs  hub.rs  lock.rs  main.rs  merge.rs  resource.rs  store.rs  sync.rs
src/agent/: claude.rs  codex.rs  cursor.rs  goose.rs  mod.rs  opencode.rs  util.rs
src/source/: git_source.rs  hub_source.rs  local_source.rs  mod.rs
